# lan-streamer

./: .clinerules  .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  lan-streamer.spec  main.py  pyproject.toml
.agents/: AGENTS.md
.github/: CODEOWNERS  dependabot.yml
.github/rulesets/: main_branch_ruleset.json  release_tags_ruleset.json
.github/scripts/: update_pre_release_changelog.py
.github/workflows/: executable.yml  lint.yml  publish.yml  release-main.yml  release-rc-pr.yml  release-rc-push.yml  release.yml  test.yml
.opencode/: opencode.json
alembic/: env.py
alembic/versions/: 0b15dec92438_add_codec_and_tracks.py  0def24d4a3b4_add_last_scanned_mtime_columns.py  1d504caf3889_add_movies_table.py  2e8292adc104_couple_playback_to_metadata.py  36e082ff742e_add_mapping_indexes.py  49d186288d29_add_media_files_and_remove_unused_.py  5a4f124e8aed_add_smart_row_cache_table.py  701d935de074_add_runtime_column_to_media_files.py  8dbcde9fc7de_add_air_date_columns.py  90c0fcb92ee7_add_tmdb_episode_group_id.py  a1b2c3d4e5f6_settings_to_db.py  aa368f3de380_decouple_files_and_playback.py  b3f9e1c2d4a5_uuid_blob_primary_keys.py  b7c8d9e0f1a2_add_cast_crew_image_tables.py  bbd1b7ccd143_add_readability_columns.py  cd94beb4248b_initial_revision.py  ce128c6d8aec_add_last_played_at.py  dd91b65c745e_add_myanimelist_columns.py  e5421f98bc12_add_last_played_position.py  fa4ad8226f3a_add_episodes_runtime.py
dev_run/: config.json
docker/: Dockerfile.fedora  Dockerfile.ubuntu
docs/: TODO  async_improvements.md  async_plan.md  class_inheritance.md  code_review_mtime_parallelization.md  code_review_parallelization_2.md  code_review_parallelization_changes.md  codebase_guide.md  logic_flows.md  metadata.md  metadata_review.md  parellel_scan.md  scan.md  scan_review_gemini.md  scan_review_opencode.md  search.md  season_detail_redesign.md  threading.md  threading_fixs.md  threading_improvements.md
scratch/: test_save_library.py
src/: entrypoint.py
src/lan_streamer/: __init__.py  backend.py  backup.py  config.py  db.py  jellyfin.py  logging_handler.py  main.py  models.py  opensubtitles.py  player.py  player_widget.py  renamer.py  scanner.py  tmdb.py  ui.py  ui_views.py  wakelock.py
src/lan_streamer/assets/: MetadataMatchDialog.qml  RenameFilesDialog.qml  SeriesDetailView.qml  SeriesGridView.qml  SettingsView.qml  components.qml  main.qml
src/lan_streamer/backend/: __init__.py  async_worker_base.py  database_writer.py  jellyfin_workers.py  metadata_worker_apply.py  metadata_worker_embed.py  metadata_worker_property.py  metadata_worker_refresh.py  metadata_worker_search.py  metadata_worker_subtitle.py  metadata_workers.py  post_scan_worker.py  proxy.py  scan_series_worker.py  scan_worker_all.py  scan_worker_async.py  scan_worker_base.py  scan_worker_cleanup.py  scan_worker_single.py  scan_workers.py
src/lan_streamer/db/: __init__.py  async_session.py  connection.py  library.py  library_async.py  library_movie.py  library_shared.py  library_tv.py  models.py  models_cast.py  orm_serialization.py  queries.py  queries_cast.py  queries_config.py  queries_file_discovery.py  queries_metadata_matching.py  queries_playback.py  queries_technical_extraction.py  queries_ui.py  smart_row_cache.py  sync.py  utils.py
src/lan_streamer/playback/: __init__.py  cache.py  proxy.py  wakelock.py  widget.py
src/lan_streamer/providers/: __init__.py  http_client.py  jellyfin.py  jellyfin_async.py  myanimelist.py  myanimelist_async.py  opensubtitles.py  opensubtitles_async.py  tmdb.py  tmdb_async.py
src/lan_streamer/scanner/: __init__.py  core.py  file_property_scanner.py  metadata.py  parser.py  pass1_file_discovery.py  pass2_metadata.py  pass3_technical.py  proxy.py  renamer.py  runtime.py  scan_movie.py  scan_tv.py  versioning.py
src/lan_streamer/services/: __init__.py  file_discovery.py  mapping_updates.py  media_mapping.py  metadata_cast.py  metadata_common.py  metadata_episode.py  metadata_images.py  metadata_movie.py  (+5 more)
tests/: conftest.py  repro_ui_issue.py  test_backend.py  test_backup.py  test_cleanup.py  test_config.py  test_db.py  test_db_migration.py  test_db_performance.py  test_db_upsert.py  test_e2e_workflow.py  test_entrypoint.py  test_episode_details.py  test_jellyfin.py  test_load.py  test_main.py  test_metadata_optimization.py  test_migrations.py  test_movie_details.py  test_movies.py  test_opensubtitles.py  test_player.py  test_player_widget.py  test_qml_backend.py  test_realtime_logging.py  test_rename_ui.py  test_renamer.py  test_scanner.py  test_series_details.py  test_tmdb.py  test_ui.py  test_wakelock.py
tests/e2e/: test_e2e_workflow.py
tests/load/: test_load.py
tests/unit/: conftest.py  test_additional_coverage.py  test_coverage_gaps.py  test_entrypoint.py  test_extended_coverage.py  test_main.py  test_proxy_modules.py  test_release_automation.py  test_version.py
(+152 files in other folders)
