[project]
name = "lan-streamer"
version = "0.15.0"
description = "Lightweight media library manager for local playback with Jellyfin synchronization"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-vlc>=3.0.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.15.1",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.15.12",
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
]
[project.scripts]
lan-streamer = "lan_streamer.main:main"
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=lan_streamer --cov-report=term-missing"
filterwarnings = ["error", "ignore::ResourceWarning"]
markers = [
    "load: marks tests as load/performance tests (skipped by default)"
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.15.0"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "src/lan_streamer/__init__.py"
]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
disable_error_code = ["method-assign", "return-value", "var-annotated", "no-redef"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "lan_streamer.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
